syntax="proto3";

option go_package=".;pb";

message RegisterReq {
  string username =1;
  string password =2;
  int64 phoneNumber=3;
  string email =4;
}

message RegisterResp{
  bool flag =1;
  string message =2;
}
message LoginReq{
  string username =1;
  string password =2;
  int64 phoneNumber=3;
  string email =4;
  bool isGithubUser=5;
}
message LoginResp{
  bool flag=1;
  string message=2;
  string token =3;
}
message HomePageReq{
  string username =1;
}
message HomePageResp{
  string username =1;
  int64 phoneNumber =2;
  string email=3;
  int64  score=4;
}


service User{
  rpc Register(RegisterReq)returns(RegisterResp);
  rpc Login(LoginReq)returns(LoginResp);
  rpc HomePage(HomePageReq)returns(HomePageResp);
}